Fixed Issue 1023 - Elements such as Flash in iframes and dropdowns in IE bleed through FBLite, I have put an iframe 'shield' behind FBLite to prevent this
git-svn-id: http://fbug.googlecode.com/svn/trunk@1874 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/lite/1.2/firebug-lite.css
+++ b/lite/1.2/firebug-lite.css
@@ -8,6 +8,8 @@
 #Firebug em { font-style:italic; }
 /* */
 
+#FirebugIFrame { position:fixed !important; position:absolute; z-index:99999998; left:0; bottom:0; width:100%; height:295px; background:#fff; border-width:0px; }
+
 #Firebug { position:fixed !important; position:absolute; z-index:99999999; left:0; bottom:0; width:100%; height:295px; background:#fff; overflow:hidden; }
 #Firebug .Resizer { position:absolute; top:0; width:100%; height:5px; background:transparent; *background:url(spacer.gif); cursor:n-resize; -moz-user-select:none; }
 #Firebug .Header { height:38px; background:#ccc url(firebug.gif) 0 -85px; }
